welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: ';' expected but 'return' found.
 	if (nums.length<=4){for (i<-0 to nums.length-1){if (nums(i)==9){return true}}return false}
                                                                                     ^